[project]
name = "src-ollama-examples"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "numpy>=1.24.0",
    "ollama>=0.6.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "plotly>=5.17.0",
    "pre-commit>=4.3.0",
    "pydantic>=2.0.0",
    "scikit-learn>=1.3.0",
    "streamlit>=1.50.0",
    "tqdm>=4.67.1",
    "watchdog>=6.0.0",
]
